[package]
name = "hilog"
version = "0.2"
edition = "2021"
rust-version = "1.78.0"
license = "Apache-2.0"
description = "A log and env_filter compatible logging sink for HiLog on OpenHarmony"
readme = "README.md"
repository = "https://github.com/openharmony-rs/hilog"

[dependencies]
hilog-sys = {  version = "0.1.1", features = ["log"] }
env_filter = "0.1.0"
log = "0.4.21"
arc-swap = "1.7.1"
